@@ -5,6 +5,7 @@
         - Fix VC fragments for redundant constraints.
         - Modernize ES and improve variable declarations.
         - Improve JS test coverage for Datepicker.
+        - Fix character errors in hint helper at position 0.
 
 0.39 2020-10-07
         - Add information on secret file to Readme.
